--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     height: 100vh;
     opacity: 0.90;
     background-repeat: no-repeat;
-    background-image: url(images/Mine.jpg);
+    background-image: url(Mine.jpg);
     background-position: right;
 }
 
